Add build-a-personal-portfolio-webpage to lerna
Fix include-fcc-tests.js

--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,8 @@
   "npmClinet": "yarn",
   "packages": [
     "root",
-    "front-end-libraries-projects/*"
+    "front-end-libraries-projects/*",
+    "responsive-web-design/build-a-personal-portfolio-webpage"
   ],
   "version": "0.0.0"
 }
