--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "lerna": "^3.16.4"
   },
   "scripts": {
