--- a/responsive-web-design/build-a-personal-portfolio-webpage/package.json
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -18,6 +19,7 @@
     "gulp-terser": "^1.2.0"
   },
   "scripts": {
+    "start": "gulp start",
     "clean": "gulp clean",
     "build": "gulp build",
     "predeploy": "yarn build",
