Run lerna with concurrency 1 with gh-pages

--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "clean": "lerna run clean",
-    "deploy": "lerna run deploy"
+    "deploy": "lerna run deploy --concurrency 1"
   }
 }
