--- a/front-end-libraries-projects/build-a-drum-machine/package.json
+++ b/front-end-libraries-projects/build-a-drum-machine/package.json
@@ -4,9 +4,12 @@
   "homepage": "https://asteffey.github.io/freecodecamp/build-a-drum-machine",
   "private": true,
   "dependencies": {
+    "@asteffey/react-fcc-test": "^1.0.6",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "use-key-hook": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
