--- a/front-end-libraries-projects/build-a-javascript-calculator/.eslintrc.json
+++ b/front-end-libraries-projects/build-a-javascript-calculator/.eslintrc.json
@@ -22,12 +22,14 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "jest"
     ],
     "rules": {
         "indent": [
             "error",
-            4
+            4,
+            { "ignoredNodes": ["TemplateLiteral *"] }
         ],
         "linebreak-style": [
             "error",
