--- a/front-end-libraries-projects/build-a-javascript-calculator/package.json
+++ b/front-end-libraries-projects/build-a-javascript-calculator/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^24.0.19",
+    "eslint-plugin-jest": "^22.20.0",
     "gh-pages": "^2.1.1"
   }
 }
