--- a/data-visualization-projects/visualize-data-with-a-bar-chart/package.json
+++ b/data-visualization-projects/visualize-data-with-a-bar-chart/package.json
@@ -1,12 +1,18 @@
 {
   "name": "visualize-data-with-a-bar-chart",
   "version": "0.1.0",
+  "homepage": "https://asteffey.github.io/freecodecamp/visualize-data-with-a-bar-chart",
   "private": true,
   "dependencies": {
     "@asteffey/react-fcc-test": "^1.0.8",
+    "d3": "^5.15.0",
+    "d3-tip": "https://github.com/asteffey/d3-tip#attr-style-func",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-use-dimensions": "^1.2.1",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
