--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "devDependencies": {
     "gh-pages": "^2.1.1",
-    "lerna": "^3.16.4"
+    "lerna": "^3.20.2"
+  },
+  "resolutions": {
+    "lerna/**/optimist/minimist": "0.2.1"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
