--- a/data-visualization-projects/visualize-data-with-a-choropleth-map/package.json
+++ b/data-visualization-projects/visualize-data-with-a-choropleth-map/package.json
@@ -16,6 +16,7 @@
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
