--- a/data-visualization-projects/visualize-data-with-a-choropleth-map/package.json
+++ b/data-visualization-projects/visualize-data-with-a-choropleth-map/package.json
@@ -1,6 +1,7 @@
 {
   "name": "visualize-data-with-a-choropleth-map",
   "version": "0.1.0",
+  "homepage": "https://asteffey.github.io/freecodecamp/visualize-data-with-a-choropleth-map",
   "private": true,
   "dependencies": {
     "@asteffey/react-fcc-test": "^1.0.8",
@@ -38,7 +39,9 @@
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:integration": "jest -c integration/jest.config.js",
     "lint": "eslint src",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -a -d build -e ./visualize-data-with-a-choropleth-map"
   },
   "eslintConfig": {
     "extends": "react-app"
