--- a/responsive-web-design/build-a-tribute-page/package.json
+++ b/responsive-web-design/build-a-tribute-page/package.json
@@ -10,9 +10,12 @@
     "@babel/preset-env": "^7.5.5",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
+    "gh-pages": "^3.1.0",
     "gulp": "^4.0.2",
+    "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.2.0",
-    "gulp-htmlmin": "^5.0.1"
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0"
   },
   "scripts": {
     "start": "gulp start",
