--- a/data-visualization-projects/visualize-data-with-a-bar-chart/package.json
+++ b/data-visualization-projects/visualize-data-with-a-bar-chart/package.json
@@ -19,8 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -a -d build -e ./visualize-data-with-a-bar-chart"
+    "predeploy": "yarn build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,7 +40,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@types/jest": "^24.0.25",
-    "eslint-plugin-jest": "^23.2.0",
-    "gh-pages": "^2.1.1"
+    "eslint-plugin-jest": "^23.2.0"
   }
 }
