--- a/data-visualization-projects/visualize-data-with-a-treemap-diagram/package.json
+++ b/data-visualization-projects/visualize-data-with-a-treemap-diagram/package.json
@@ -28,7 +28,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "gh-pages": "^2.1.1",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-fetch-mock": "^3.0.3"
   },
@@ -38,8 +37,7 @@
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "lint": "eslint src",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -a -d build -e ./visualize-data-with-a-treemap-diagram"
+    "predeploy": "yarn build"
   },
   "eslintConfig": {
     "extends": "react-app"
