--- a/front-end-libraries-projects/build-a-javascript-calculator/package.json
+++ b/front-end-libraries-projects/build-a-javascript-calculator/package.json
@@ -22,8 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -a -d build -e ./build-a-javascript-calculator"
+    "predeploy": "yarn build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,7 +41,6 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
-    "eslint-plugin-jest": "^22.20.0",
-    "gh-pages": "^2.1.1"
+    "eslint-plugin-jest": "^22.20.0"
   }
 }
