--- a/responsive-web-design/build-a-tribute-page/package.json
+++ b/responsive-web-design/build-a-tribute-page/package.json
@@ -10,7 +10,6 @@
     "@babel/preset-env": "^7.5.5",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
-    "gh-pages": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.2.0",
@@ -21,7 +20,6 @@
     "start": "gulp start",
     "clean": "gulp clean",
     "build": "gulp build",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -a -d dist -e build-a-tribute-page"
+    "predeploy": "yarn build"
   }
 }
