--- a/responsive-web-design/build-a-personal-portfolio-webpage/screenshotter/config.json
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/screenshotter/config.json
@@ -2,28 +2,28 @@
     "path": "../app/images/screenshots/",
     "thumbnail_path": "../app/images/screenshots/thumbnails/",
     "sites": [{
-            "url": "https://asteffey.github.io/freecodecamp/build-a-tribute-page/index.html",
+            "url": "https://asteffey.github.io/fcc-tribute-page/index.html",
             "width": 1000,
             "height": 750,
-            "out": "build-a-tribute-page.png"
+            "out": "fcc--tribute-page.png"
         },
         {
-            "url": "https://asteffey.github.io/freecodecamp/build-a-survey-form/index.html",
+            "url": "https://asteffey.github.io/fcc-survey-form/index.html",
             "width": 1000,
             "height": 750,
-            "out": "build-a-survey-form.png"
+            "out": "fcc--survey-form.png"
         },
         {
-            "url": "https://asteffey.github.io/freecodecamp/build-a-technical-documentation-page/index.html",
+            "url": "https://asteffey.github.io/fcc-technical-documentation-page/index.html",
             "width": 1000,
             "height": 750,
-            "out": "build-a-technical-documentation-page.png"
+            "out": "fcc--technical-documentation-page.png"
         },
         {
-            "url": "https://asteffey.github.io/freecodecamp/build-a-product-landing-page/index.html",
+            "url": "https://asteffey.github.io/fcc-product-landing-page/index.html",
             "width": 1000,
             "height": 750,
-            "out": "build-a-product-landing-page.png"
+            "out": "fcc--product-landing-page.png"
         }
     ]
 }
