--- a/data-visualization-projects/visualize-data-with-a-treemap-diagram/package.json
+++ b/data-visualization-projects/visualize-data-with-a-treemap-diagram/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "visualize-data-with-a-treemap-diagram",
+  "name": "fcc-treemap-diagram",
   "version": "0.1.0",
-  "homepage": "https://asteffey.github.io/freecodecamp/visualize-data-with-a-treemap-diagram",
+  "homepage": "https://asteffey.github.io/fcc-treemap-diagram",
   "private": true,
   "dependencies": {
     "@asteffey/react-fcc-test": "^1.0.8",
