--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "screenshots": "node screenshotter.js"
   },
   "browserslist": {
     "production": [
@@ -37,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "@types/jimp": "^0.2.28",
+    "@types/puppeteer": "^3.0.1",
     "@types/styled-components": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
@@ -47,6 +50,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "jimp": "^0.14.0",
+    "puppeteer": "^5.1.0"
   }
 }
