--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache: yarn
 deploy:
   provider: pages
   skip_cleanup: true
-  local_dir: dist
+  local_dir: build
   on:
     branch: master
   github_token: $GITHUB_TOKEN
