--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "freecodecamp",
+  "homepage": "https://asteffey.github.io/freecodecamp",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
